# dogschool-es

./: README.md  dogschool-test.db  dogschool_es.sqlite  dogschool_es_mockDB2dogs3tricks.sqlite  dogschool_es_mockDB2dogs3tricks_and_tricksevents.sqlite  pyproject.toml
.github/workflows/: makefile.yml
dogschool_es/: application.py  counter_processapp.py  processor.py  system.py  tricks_processapp.py  tricks_readmodel_processapp.py
dogschool_es/aggregates/: dog_aggregate.py  trick_aggregate.py
dogschool_es/database/: connection.py
dogschool_es/helpers/: aggregate_to_model.py
dogschool_es/read_models/: SchoolTricksReadModel.py  tricks_read_model.py
dogschool_es/read_repositories/: readrepository.py
tests/: test_application.py  test_dog_aggregate.py  test_system.py
tests/aggregates/: test_dog_aggregate.py  test_trick_aggregate.py
